<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>ros2_fpsdk_demo</name>
    <version>1.0.0</version>
    <description>Fixposition SDK: ROS2 Demo</description>
    <maintainer email="support@fixposition.com">Fixposition Support</maintainer>
    <license>MIT</license>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <export>
      <build_type>ament_cmake</build_type>
    </export>
    <depend>fpsdk_common</depend>
    <depend>fpsdk_ros2</depend>
    <depend>rclcpp</depend>
    <depend>std_msgs</depend>
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>
    <build_depend>builtin_interfaces</build_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
</package>
